--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,63 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://kit.fontawesome.com/f391cbb1de.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
+    <header>
+      
+      <%= link_to "Bookers" , root_path %>
+      <ul>
+      <% if user_signed_in? %>
+        <li>
+          <%= link_to user_path(current_user) do %>
+            <i class="fas fa-home"></i> Home
+          <% end %>
+        </li>
+        <li>
+          <%= link_to users_path do %>
+            <i class="fas fa-users"></i> Users
+          <% end %>
+        </li>
+        <li>
+          <%= link_to books_path do %>
+            <i class="fas fa-book-open"></i> Books
+          <% end %>
+        </li>
+        <li>
+          <%= link_to destroy_user_session_path, method: :delete do %>
+            <i class="fas fa-sign-out-alt"></i> Log out
+          <% end %>
+        </li>
+      <% else %>
+        <li>
+          <%= link_to root_path do %>
+            <i class="fas fa-home"></i> Home
+          <% end %>
+        </li>
+        <li>
+          <%= link_to home_about_path do %>
+            <i class="fas fa-link"></i> About
+          <% end %>
+        </li>
+        <li>
+          <%= link_to new_user_registration_path do %>
+            <i class="fas fa-user-plus"></i> Sign up
+          <% end %>
+        </li>
+        <li>
+          <%= link_to new_user_session_path do %>
+            <i class="fas fa-sign-in-alt"></i> Log in
+          <% end %>
+        </li>
+      <% end %>
+      <%= flash[:notice] %>
+      </ul>
+      
+    </header>
     <%= yield %>
   </body>
 </html>
