--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,12 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<h1>Editing Book</h1>
+<%= render "layouts/error",msg: @book %>
+
+<%= form_with model: @book, url: book_path(@book), method: :patch do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %>
+  <%= f.label :opinion %>
+  <%= f.text_area :body %>
+  <%= f.submit "Update Book" %>
+<% end %>
+
+<%= link_to "Show", book_path(@book) %> | <%= link_to "Back", books_path %>
