--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<%= render "layouts/info", user: @user,book: @book %>
+<h2>Users</h2>
+<table class="table">
+  <tr>
+    <th>image</th>
+    <th>name</th>
+    <th></th>
+  </tr>
+  <% @users.each do |user| %>
+    <tr>
+      <td><%= image_tag user.get_profile_image(80,80) %></td>
+      <td><%= user.name %></td>
+      <td><%= link_to "Show",user_path(user) %></td>
+    </tr>
+  <% end %>
+</table>
