--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,12 +1,22 @@
-<h1>Editing Book</h1>
-<%= render "layouts/error",msg: @book %>
+<div class="row">
+  <div class="col-sm-12 col-md-8 col-lg-5 px-sm-0 mx-auto">
+    <h1>Editing Book</h1>
+    <%= render "layouts/error",msg: @book %>
 
-<%= form_with model: @book, url: book_path(@book), method: :patch do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.label :opinion %>
-  <%= f.text_area :body %>
-  <%= f.submit "Update Book" %>
-<% end %>
+    <%= form_with model: @book, url: book_path(@book), method: :patch do |f| %>
+      <div class="form-group">
+        <%= f.label :title %>
+        <%= f.text_field :title,class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :opinion %>
+        <%= f.text_area :body,class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.submit "Update Book",class: "btn btn-success" %>
+      </div>
+    <% end %>
 
-<%= link_to "Show", book_path(@book) %> | <%= link_to "Back", books_path %>
+    <%= link_to "Show", book_path(@book) %> | <%= link_to "Back", books_path %>
+  </div>
+</div>
