--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,16 @@
-<h1>welcome to <strong><i class="fas fa-book"></i>Bookers !!</strong></h1>
-<p>In <strong><i class="fas fa-book"></i>Bookers</strong>,</p>
-<p>you can share and exchange your opinions , inpressions , and emotions</p>
-<p>about various books!</p>
-<%= link_to "Log in",new_user_session_path %>
-<%= link_to "Sign up",new_user_registration_path %>
+<div class="row">
+  <div class="mx-auto col-11 col-sm-10 col-md-8 col-lg-6">
+    <h1>welcome to <strong><i class="fas fa-book"></i>Bookers </strong>!!</h1>
+    <p>In <strong><i class="fas fa-book"></i>Bookers</strong>,</p>
+    <p>you can share and exchange your opinions , inpressions , and emotions</p>
+    <p>about various books!</p>
+    <div class="btn-wrapper col-10 mx-auto">
+      <div class="row">
+        <%= link_to "Log in",new_user_session_path,class: "btn btn-info btn-block btn-sm mb-3" %>
+      </div>
+      <div class="row">
+        <%= link_to "Sign up",new_user_registration_path,class: "btn btn-success btn-block btn-sm" %>
+      </div>
+    </div>
+  </div>
+</div>
