--- a/app/views/layouts/_info.html.erb
+++ b/app/views/layouts/_info.html.erb
@@ -1,23 +1,28 @@
-<h2>User info</h2>
-<%= image_tag user.get_profile_image(100,100) %>
-<table class="table">
-  <tr>
-    <th>name</th>
-    <th><%= user.name %></th>
-  </tr>
-  <tr>
-    <th>introduction</th>
-    <th><%= user.introduction %></th>
-  </tr>
-</table>
-<%= link_to edit_user_path(user) do %>
-  <i class="fas fa-user-cog"></i>
-<% end %>
-<h2>New book</h2>
-<%= form_with model: book, url: books_path,method: :post do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.label :opinion %>
-  <%= f.text_area :body %>
-  <%= f.submit %>
-<% end %>
+
+  <div class="col-md-3">
+    <h2>User info</h2>
+    <%= image_tag user.get_profile_image(100,100) %>
+    <table class="table">
+      <tr>
+        <th>name</th>
+        <th><%= user.name %></th>
+      </tr>
+      <tr>
+        <th>introduction</th>
+        <th><%= user.introduction %></th>
+      </tr>
+    </table>
+    <div class="row">
+      <%= link_to edit_user_path(user),class: "btn btn-outline-secondary btn-block" do %>
+        <i class="fas fa-user-cog"></i>
+      <% end %>
+    </div>
+    <h2>New book</h2>
+    <%= form_with model: book, url: books_path,method: :post do |f| %>
+      <%= f.label :title %>
+      <%= f.text_field :title %>
+      <%= f.label :opinion %>
+      <%= f.text_area :body %>
+      <%= f.submit %>
+    <% end %>
+  </div>
