--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,23 @@
-<h2>User info</h2>
-<%= render "layouts/error", msg: @user %>
-<%= form_with model: @user, url: user_path(@user),method: :patch do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.label :image %>
-  <%= f.file_field :profile_image, accept: "image/*" %>
-  <%= f.label :introduction %>
-  <%= f.text_area :introduction %>
-  <%= f.submit "Update User" %>
-<% end %>
+<div class="row">
+  <div class="col-sm-12 col-md-8 col-lg-5 px-sm-0 mx-auto">
+    <h2>User info</h2>
+    <%= render "layouts/error", msg: @user %>
+    <%= form_with model: @user, url: user_path(@user),method: :patch do |f| %>
+      <div class="form-group">
+        <%= f.label :name %>
+        <%= f.text_field :name,class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :image %>
+        <%= f.file_field :profile_image, accept: "image/*",class: "form-control-file" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :introduction %>
+        <%= f.text_area :introduction,class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.submit "Update User",class: "btn btn-secondary" %>
+      </div>
+    <% end %>
+  </div>
+</div>
